@@ -2,31 +2,18 @@ package com.cavetale.election;
 
 import com.cavetale.core.command.RemotePlayer;
 import com.cavetale.core.connect.Connect;
-import com.cavetale.election.sql.SQLBallot;
+import com.cavetale.election.dialog.ElectionMenuDialog;
 import com.cavetale.election.sql.SQLChoice;
-import com.cavetale.election.sql.SQLElection;
-import com.cavetale.election.sql.SQLVote;
 import com.cavetale.election.struct.Position;
 import com.cavetale.election.util.Json;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.event.ClickEvent;
-import net.kyori.adventure.text.event.HoverEvent;
 import org.bukkit.Bukkit;
-import org.bukkit.Sound;
-import org.bukkit.SoundCategory;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
-import static net.kyori.adventure.text.Component.join;
-import static net.kyori.adventure.text.Component.newline;
 import static net.kyori.adventure.text.Component.text;
-import static net.kyori.adventure.text.JoinConfiguration.separator;
 import static net.kyori.adventure.text.format.NamedTextColor.*;
 import static net.kyori.adventure.text.format.TextDecoration.*;
 
@@ -39,149 +26,48 @@ public final class ElectionCommand implements TabExecutor {
     }
 
     @Override
-    public boolean onCommand(final CommandSender sender, final Command command, final String alias, final String[] args) {
-        final RemotePlayer player;
-        if (sender instanceof Player p) {
-            player = RemotePlayer.wrap(p);
-        } else if (sender instanceof RemotePlayer p) {
-            player = p;
-        } else {
-            sender.sendMessage("[election:elect] Player expected!");
+    public boolean onCommand(CommandSender sender, Command command, String alias, String[] args) {
+        if (sender instanceof RemotePlayer player && args.length == 3 && args[0].equals("warp")) {
+            warp(player, args[1], args[2]);
             return true;
         }
-        if (args.length == 0) {
-            plugin.database.find(SQLElection.class).findListAsync(list -> {
-                    list.removeIf(row -> !row.isEnabled());
-                    list.removeIf(row -> row.getPermission() != null
-                                  && !row.getPermission().isEmpty()
-                                  && !player.hasPermission(row.getPermission()));
-                    if (list.isEmpty()) {
-                        player.sendMessage(text("No elections available!", RED));
-                    }
-                    List<Component> lines = new ArrayList<>();
-                    lines.add(text("Elections", DARK_BLUE, BOLD));
-                    lines.add(newline());
-                    for (SQLElection row : list) {
-                        String cmd = "/elect " + row.getName();
-                        Component displayName = row.getDisplayNameComponent();
-                        lines.add(displayName
-                                  .clickEvent(ClickEvent.runCommand(cmd))
-                                  .hoverEvent(HoverEvent.showText(displayName)));
-                    }
-                    Books.open(player.getPlayer(), List.of(join(separator(newline()), lines)));
-                });
+        if (!(sender instanceof Player player)) {
+            sender.sendMessage(text("/elect: Player expected", RED));
             return true;
         }
-        plugin.database.scheduleAsyncTask(() -> {
-                Election election = new Election();
-                if (!election.load(args[0])) return;
-                if (!election.fill()) return;
-                Bukkit.getScheduler().runTask(plugin, () -> onCommand(player, election, Arrays.copyOfRange(args, 1, args.length)));
-            });
+        new ElectionMenuDialog(plugin, player).open();
         return true;
     }
 
-    private void openBook(Player player, String name) {
+    private void warp(RemotePlayer player, String electionName, String choiceName) {
         plugin.database.scheduleAsyncTask(() -> {
                 Election election = new Election();
-                if (!election.load(name)) return;
+                if (!election.load(electionName)) return;
                 if (!election.fill()) return;
-                Bukkit.getScheduler().runTask(plugin, () -> {
-                        player.closeInventory();
-                        player.openBook(Books.makeBook(election, player));
-                    });
+                Bukkit.getScheduler().runTask(plugin, () -> warp2(player, election, choiceName));
             });
     }
 
-    private void onCommand(RemotePlayer player, Election election, String[] args) {
-        if (!election.election.isEnabled()) return;
-        String permission = election.election.getPermission();
-        if (permission != null && !permission.isEmpty()) {
-            if (!player.hasPermission(permission)) return;
-        }
-        if (args.length == 0) {
-            player.getPlayer().closeInventory();
-            player.getPlayer().openBook(Books.makeBook(election, player.getPlayer()));
-            return;
-        }
-        switch (args[0]) {
-        case "vote": {
-            if (args.length != 2) return;
-            SQLChoice choice = election.findChoice(args[1]);
-            if (choice == null) return;
-            if (election.election.getType() != ElectionType.PICK_ONE) return;
-            SQLBallot ballot = election.findBallot(player.getUniqueId());
-            if (ballot != null) {
-                if (ballot.getChoiceId() == choice.getId()) return;
-                ballot.setChoiceId(choice.getId());
-                ballot.setUserName(player.getName());
-                plugin.database.updateAsync(ballot, count -> voteCallback(player.getPlayer(), count, election), "choice_id", "user_name");
-            } else {
-                ballot = new SQLBallot(player.getUniqueId(), player.getName(), election.election, choice);
-                plugin.database.insertIgnoreAsync(ballot, count -> voteCallback(player.getPlayer(), count, election));
-            }
-            break;
-        }
-        case "up":
-        case "down":
-        case "none": {
-            if (args.length != 2) return;
-            SQLChoice choice = election.findChoice(args[1]);
-            if (choice == null) return;
-            if (election.election.getType() != ElectionType.UP_DOWN_VOTE) return;
-            int newValue;
-            switch (args[0]) {
-            case "up": newValue = 1; break;
-            case "down": newValue = -1; break;
-            default: newValue = 0; break;
-            }
-            SQLVote vote = election.findVote(player.getUniqueId(), choice);
-            if (vote != null) {
-                if (vote.getValue() == newValue) return;
-                vote.setValue(newValue);
-                vote.setUserName(player.getName());
-                plugin.database.updateAsync(vote, count -> voteCallback(player.getPlayer(), count, election), "value", "user_name");
-            } else {
-                vote = new SQLVote(player.getUniqueId(), player.getName(), election.election, choice, newValue);
-                plugin.database.insertIgnoreAsync(vote, count -> voteCallback(player.getPlayer(), count, election));
-            }
-            break;
-        }
-        case "warp": {
-            if (args.length != 2) return;
-            SQLChoice choice = election.findChoice(args[1]);
-            if (choice == null) return;
-            if (choice.getWarpJson() == null) return;
-            Position position = Json.deserialize(choice.getWarpJson(), Position.class);
-            if (position == null) return;
-            if (!position.isOnThisServer() && player.isPlayer()) {
-                Connect.get().dispatchRemoteCommand(player.getPlayer(),
-                                                    "elect " + election.election.getName() + " warp " + choice.getName(),
-                                                    position.getServer());
-            } else {
-                player.bring(plugin, position.toLocation(), player2 -> {
-                        if (player2 == null) return;
-                        player2.sendMessage(text("Warping to site", GREEN));
-                    });
-            }
-            break;
-        }
-        default: break;
-        }
-    }
-
-    private void voteCallback(Player player, int count, Election election) {
-        if (count == 0) {
-            player.sendMessage(text("Vote failed!").color(RED));
+    private void warp2(RemotePlayer player, Election election, String choiceName) {
+        SQLChoice choice = election.findChoice(choiceName);
+        if (choice == null) return;
+        if (choice.getWarpJson() == null) return;
+        Position position = Json.deserialize(choice.getWarpJson(), Position.class);
+        if (position == null) return;
+        if (!position.isOnThisServer() && player.isPlayer()) {
+            Connect.get().dispatchRemoteCommand(player.getPlayer(),
+                                                "elect " + election.election.getName() + " warp " + choice.getName(),
+                                                position.getServer());
         } else {
-            player.playSound(player.getLocation(), Sound.UI_BUTTON_CLICK, SoundCategory.MASTER, 1.0f, 1.0f);
-            player.sendMessage(text("Vote succeeded!").color(GREEN));
-            openBook(player, election.election.getName());
+            player.bring(plugin, position.toLocation(), player2 -> {
+                    if (player2 == null) return;
+                    player2.sendMessage(text("Warping to site", GREEN));
+                });
         }
     }
 
     @Override
-    public List<String> onTabComplete(final CommandSender sender, final Command command, final String alias, final String[] args) {
-        return Collections.emptyList();
+    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+        return List.of();
     }
 }
